--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
     <div class="overlay">
         <h2>Designing Digital Experiences That Inspire Growth</h2>
         <p>We craft visually stunning and user-friendly designs that help businesses thrive in the digital landscape.</p>
-        <div class="hero-buttons">
-            <a href="#portfolio" class="btn primary">View Portfolio</a>
-            <a href="#contact" class="btn secondary">Get in Touch</a>
+        <div class="hero-buttons">>
+            <a href="portfolio.html" class="btn primary">View Portfolio</a>
+
+            <a href="contact.html" class="btn secondary">Get in Touch</a>
         </div>
     </div>
 </section>
