--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <header class="header">
         <div class="container">
-            <h1 class="logo">GrowthSphere</h1>
+            <a href="index.html" class="logo">GrowthSphere</a>
             <nav class="navbar">
                 <ul class="nav-links">
                     <li><a href="/index.html">Home</a></li>
